added some possible JVM opts